--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,9 @@
 Password=GNdTIbJ1iaexyOXf
-MONGO_URI=mongodb://localhost:27017/carManagementDB
+MONGO_URI=mongodb+srv://hardwar:dyNL3Q8l4Zeqq1oW@clusterevaluation.jkgieqv.mongodb.net/?retryWrites=true&w=majority&appName=ClusterEvaluation
 JWT_SECRET=upesmerelaudepe
 PORT=5000
+
+
+
+3OMYgWNjkvCazXZe
+stufffzx
