--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "build": "npm install"
-
+    "dev": "nodemon index.js"
   },
   "author": "sanskar",
   "license": "MIT",
